About & Service Page

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             <div class="col-6">
               <!-- Menu -->
               <ul class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">Our Story</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">Our Story</a></li>
+                <li><a href="./service.html">Services</a></li>
                 <li><a href="#">Project</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./contact.html">Contact</a></li>
               </ul>
               <!-- End OF Menu -->
             </div>
@@ -451,10 +451,11 @@
 
             <!-- Footer Menu -->
             <ul class="menu">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Our Story</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Project</a></li>
+              <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">Our Story</a></li>
+                <li><a href="./service.html">Services</a></li>
+                <li><a href="#">Project</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
           </div>
 
