--- a/about.html
+++ b/about.html
@@ -213,6 +213,21 @@
           </div>
 
         </div>
+
+        <div class="tagline-container">
+          <!-- Footer Tagline  -->
+          <div class="row">
+            <div class="col-lg-6">
+              <p>&copy; Abishkar Interior</p>
+            </div>
+            <div class="col-lg-6">
+              <p class="text-end">Designed & Developed By <a href="#" class="text-muted">Tinta Square</a></p>
+            </div>
+          </div>
+          <!-- / -->
+        </div>
+
+        
       </div>
     </div>
     <!-- End Of Footer -->
