--- a/index.html
+++ b/index.html
@@ -612,9 +612,24 @@
                 <li><a href="#">Project</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
+
           </div>
 
         </div>
+
+        <div class="tagline-container">
+          <!-- Footer Tagline  -->
+          <div class="row">
+            <div class="col-lg-6">
+              <p>&copy; Abishkar Interior</p>
+            </div>
+            <div class="col-lg-6">
+              <p class="text-end">Designed & Developed By <a href="#" class="text-muted">Tinta Square</a></p>
+            </div>
+          </div>
+          <!-- / -->
+        </div>
+
       </div>
     </div>
     <!-- End Of Footer -->
