--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,9 @@
 
           <form class="contact-us-form">
 
-            <p>Please, fill out the form below.</p>
+            <div class="section-title" id="contactBannerText">
+              <h2>Please, fill out the form below.</h2>
+            </div>
 
             <div class="form-group">
               <label></label>
@@ -111,6 +113,16 @@
         </div>
 
       </div>
+
+      <!-- Google Map -->
+      <div class="row">
+        <div class="col-lg-12">
+          <!-- <div class="container"> -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1841.8099161690864!2d88.41455638349301!3d22.593317798146526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0275e945b858bb%3A0xb73608fd95e1cbdf!2sCF-18%2C%20CF%20Block%2C%20Sector%201%2C%20Bidhannagar%2C%20Kolkata%2C%20West%20Bengal%20700064!5e0!3m2!1sen!2sin!4v1612865210099!5m2!1sen!2sin" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+         <!--  </div> -->
+        </div>
+      </div> 
+      <!-- End Of Google Map -->
 
     <!-- Footer -->
     <div class="row">
@@ -166,12 +178,28 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <!-- Custom Script -->
     <script type="text/javascript">
-     
+     gsap.from('#contactBannerText h2', {
+      y: 200,
+      opacity: 0,
+      skewY: 20,
+      duration: 2,
+      ease: "power4.out",
+      scrollTrigger: {
+        trigger: '#contactBannerText',
+        //toggleActions: 'restart none none none',
+        //scrub: true,
+        // markers: true
+      }
+     })
     </script>
 
   </body>
