--- a/service.html
+++ b/service.html
@@ -80,7 +80,7 @@
                 <br /><br />
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua.</p>
-                <a href="#" class="button black-border">Contact US</a>
+                <a href="./contact.html" class="button black-border">Contact US</a>
               </div>
             </div>
           </div>
@@ -93,7 +93,7 @@
                 <br /><br />
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua.</p>
-                <a href="#" class="button black-border">Contact US</a>
+                <a href="./contact.html" class="button black-border">Contact US</a>
               </div>
             </div>
             <div class="col-lg-6">
@@ -112,7 +112,7 @@
                 <br /><br />
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua.</p>
-                <a href="#" class="button black-border">Contact US</a>
+                <a href="./contact.html" class="button black-border">Contact US</a>
               </div>
             </div>
           </div>
