--- a/service.html
+++ b/service.html
@@ -30,12 +30,16 @@
       <div class="col-lg-12 header">
         <div class="container">
           <div class="row">
-            <div class="col-6">
-              
+            <div class="col-lg-6 col-8">
+              <a href="./index.html">
+                <img src="./assets/img/ic_logo_white.png" alt="" class="img-fluid" />
+              </a>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 col-4">
+              <a href="javascript:void(0)" class="menu-btn">&#9776;</a>
               <!-- Menu -->
               <ul class="menu">
+                <a href="javascript:void(0)" class="menu-close-btn">&times;</a>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">Our Story</a></li>
                 <li><a href="./service.html">Services</a></li>
@@ -87,7 +91,7 @@
 
           <!-- 2nd Row -->
           <div class="row">
-            <div class="col-lg-6 d-flex align-items-center">
+            <div class="col-lg-6 d-flex align-items-center responsive-order-two">
               <div class="service-description">
                 <h2>Interior</h2>
                 <br /><br />
@@ -96,7 +100,7 @@
                 <a href="./contact.html" class="button black-border">Contact US</a>
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 responsive-order-one">
               <img src="./assets/img/jolene-hardy-uuApNXxgcRM-unsplash.jpg" alt="" class="img-fluid" />
             </div>
           </div>
@@ -195,10 +199,10 @@
           <!-- Footer Tagline  -->
           <div class="row">
             <div class="col-lg-6">
-              <p>&copy; Abishkar Interior</p>
+              <p class="copyright-text">&copy; Abishkar Interior</p>
             </div>
             <div class="col-lg-6">
-              <p class="text-end">Designed & Developed By <a href="#" class="text-muted">Tinta Square</a></p>
+              <p class="trademark-text">Designed & Developed By <a href="#" class="text-muted">Tinta Square</a></p>
             </div>
           </div>
           <!-- / -->
@@ -255,6 +259,14 @@
           }
         }
       });
+     })
+
+     $('.menu-btn').click(function() {
+        $('.menu').css('left','0')
+     })
+
+     $('.menu-close-btn').click(function() {
+        $('.menu').css('left','100%')
      })
     </script>
 
