--- a/index.html
+++ b/index.html
@@ -852,6 +852,11 @@
           el: '.swiper-pagination',
           clickable: true,
         },
+        autoplay: {
+          delay: 2500,
+          disableOnInteraction: false,
+        },
+        loop: true,
       })
 
      function Counter(duration) {
