--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
               <div class="col-lg-12">
                 <!-- Section Title -->
                 <div class="section-title" id="testinomialText">
-                  <h2>Testinomials</h2>
+                  <h2>Testimonials</h2>
                 </div>
               </div>
             </div>
